fix: fix legibility issues on light mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,11 +21,12 @@
 }
 
 .btn {
-  @apply px-3 py-2 rounded-sm outline-none
-           transition duration-100
-           bg-purple-600 hover:bg-purple-500
-           ring-offset-dark-800 ring-purple-400
-            transform text-center select-none;
+  @apply px-3 py-2 rounded-md outline-none
+         transition duration-100
+         ring-offset-dark-800 ring-purple-400
+         transform text-center select-none;
+
+  background-color: #ee8f3f;
 }
 
 .btn:hover {
@@ -54,7 +55,7 @@
 }
 
 .prose-toc {
-  @apply bg-dark-900 sticky top-0 left-0 h-[100vh] overflow-x-auto;
+  @apply bg-light-400 dark:bg-dark-900 sticky top-0 left-0 h-[100vh] overflow-x-auto;
 }
 
 .prose-toc > nav > ul {
@@ -70,11 +71,11 @@
 }
 
 .prose-toc a {
-  @apply transition-all duration-100 pl-4 py-2 rounded-md w-full hover:bg-dark-500 block;
+  @apply transition-all duration-100 pl-4 py-2 rounded-md w-full hover:bg-light-800 dark:hover:bg-dark-500 block;
 }
 
 .prose-toc h4 {
-  @apply px-4 py-2 bg-dark-800;
+  @apply px-4 py-2 bg-light-800 dark:bg-dark-800;
 }
 
 @media (max-width: 800px) {
@@ -84,6 +85,7 @@
 }
 
 .prose a {
+  color: #2aa1bf;
   text-decoration: underline;
 }
 .prose a:visited {
@@ -131,15 +133,16 @@
 }
 
 .prose code {
-  color: #f8f8f2;
-  background-color: #32332e;
-  border-radius: 10px;
+  @apply bg-light-700 dark:bg-dark-900 dark:text-white;
+
+  border-radius: 4px;
   padding: 4px;
   white-space: nowrap;
 }
 
 .prose pre {
-  background-color: #32332e !important;
+  @apply bg-light-700 dark:bg-dark-900 dark:text-white;
+
   border-radius: 10px;
   padding: 4px;
 }
